Fix alignment of form when sticking upon scroll

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -7,4 +7,7 @@ header {
   display: flex;
   align-items: center;
   padding-left: var(--space-3);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
