--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,6 @@
 main {
   display: grid;
+  position: relative;
   grid-template-columns: repeat(2, 1fr);
   font-family: "Source Sans 3", sans-serif;
 }
@@ -20,8 +21,11 @@ main .form-wrapper {
   color: var(--main-color);
   display: grid;
   grid-template-columns: 1fr auto;
-  height: 88vh;
+  height: calc(100vh - 70px);
+  max-height: 100vh;
   overflow-y: auto;
+  position: sticky;
+  top: 70px;
   transition: transform 0.8s ease;
   will-change: contents;
 }
